# so-vits-svc-fork

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  README_zh_CN.md  flake.nix  pyproject.toml
nix/: shells.nix
src/so_vits_svc_fork/: dataset.py  gui.py  train.py  utils.py
src/so_vits_svc_fork/cluster/: train_cluster.py
src/so_vits_svc_fork/inference/: core.py  main.py
src/so_vits_svc_fork/modules/: attentions.py  descriminators.py  synthesizers.py
src/so_vits_svc_fork/modules/decoders/hifigan/: _models.py
src/so_vits_svc_fork/preprocessing/: preprocess_hubert_f0.py  preprocess_resample.py
