[project]
name = "so-vits-svc-fork"
version = "4.2.24"
description = "A fork of so-vits-svc."
authors = [
    { name = "34j", email = "34j.95a2p@simplelogin.com" }
]
#license = "MIT"
#readme = "README.md"
repository = "https://github.com/34j/so-vits-svc-fork"
documentation = "https://so-vits-svc-fork.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "so_vits_svc_fork", from = "src" },
]


dependencies = [
    "SoundFile",
    "click",
    "cm-time",
    "fastapi",
    "librosa",
    "lightning",
    "matplotlib",
    "numpy",
    "onnx",
    "onnxoptimizer",
    "onnxsim",
    "pebble",
    "praat-parselmouth",
    "pysimplegui-4-foss",
    "pyworld",
    "requests",
    "rich",
    "scipy",
    "setuptools",
    "sounddevice",
    "tensorboard",
    "tensorboardx",
    "torch",
    "torchaudio",
    "torchcrepe",
    "tqdm",
    "tqdm-joblib",
    "transformers",
]
requires-python = ">= 3.12"

[project.urls]
"Bug Tracker" = "https://github.com/34j/so-vits-svc-fork/issues"
"Changelog" = "https://github.com/34j/so-vits-svc-fork/blob/main/CHANGELOG.md"


[project.scripts]
"so-vits-svc-fork" = "so_vits_svc_fork.__main__:cli"
"svc" = "so_vits_svc_fork.__main__:cli"
"svcf" = "so_vits_svc_fork.__main__:cli"
"svcg" = "so_vits_svc_fork.gui:main"
"svc-gui" = "so_vits_svc_fork.gui:main"
"svcf-gui" = "so_vits_svc_fork.gui:main"

[project.optional-dependencies]
docs = [
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/so_vits_svc_fork"]
