[project]
name = "so-vits-svc-fork"
version = "4.2.24"
description = "A fork of so-vits-svc."
authors = [
    { name = "34j", email = "34j.95a2p@simplelogin.com" }
]
#license = "MIT"
#readme = "README.md"
repository = "https://github.com/34j/so-vits-svc-fork"
documentation = "https://so-vits-svc-fork.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "so_vits_svc_fork", from = "src" },
]


dependencies = [
    "SoundFile",
    "click",
    "cm-time",
    "fastapi",
    "librosa",
    "lightning",
    "matplotlib",
    "numpy",
    "onnx",
    "onnxoptimizer",
    "onnxsim",
    "pebble",
    "praat-parselmouth",
    "pysimplegui-4-foss",
    "pyworld",
    "requests",
    "rich",
    "scipy",
    "setuptools",
    "sounddevice",
    "tensorboard",
    "tensorboardx",
    "torch",
    "torchaudio",
    "torchcrepe",
    "tqdm",
    "tqdm-joblib",
    "transformers",
]
requires-python = ">= 3.11"

[project.urls]
"Bug Tracker" = "https://github.com/34j/so-vits-svc-fork/issues"
"Changelog" = "https://github.com/34j/so-vits-svc-fork/blob/main/CHANGELOG.md"


[project.scripts]
"so-vits-svc-fork" = "so_vits_svc_fork.__main__:cli"
"svc" = "so_vits_svc_fork.__main__:cli"
"svcf" = "so_vits_svc_fork.__main__:cli"
"svcg" = "so_vits_svc_fork.gui:main"
"svc-gui" = "so_vits_svc_fork.gui:main"
"svcf-gui" = "so_vits_svc_fork.gui:main"

[project.optional-dependencies]
docs = [
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
"pre-commit",
"pytest",
"pytest-cov",
"pipdeptree",
"pip-licenses"

]

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/so_vits_svc_fork/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=so_vits_svc_fork --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]


[tool.ruff]
target-version = "py311"
fixable = ["ALL"]

[tool.ruff.lint]
preview = true
exclude = [
    "src/polylytics/sfx/prompt.py",
]
select = [
    # pycodestyle
    "E4", "E7", "E9",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/so_vits_svc_fork"]
