[project]
name = "so-vits-svc-fork"
version = "4.2.24"
description = "A fork of so-vits-svc."
authors = [
    { name = "34j", email = "34j.95a2p@simplelogin.com" }
]
#license = "MIT"
#readme = "README.md"
repository = "https://github.com/34j/so-vits-svc-fork"
documentation = "https://so-vits-svc-fork.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "so_vits_svc_fork", from = "src" },
]


dependencies = [
    "soundfile>=0.12.1",
    "click>=8.1.7",
    "cm-time>=0.1.2",
    "fastapi>=0.111.1",
    "librosa>=0.10.2.post1",
    "lightning>=2.3.3",
    "matplotlib>=3.9.1",
    "numpy>=2.0.1",
    "onnx>=1.16.1",
    "onnxoptimizer>=0.3.13",
    "onnxsim>=0.4.36",
    "pebble>=5.0.7",
    "praat-parselmouth>=0.4.3",
    "pysimplegui-4-foss>=4.60.4.1",
    "pyworld>=0.3.4",
    "requests>=2.32.3",
    "rich>=13.7.1",
    "scipy>=1.14.0",
    "setuptools>=71.1.0",
    "sounddevice>=0.4.7",
    "tensorboard>=2.17.0",
    "tensorboardx>=2.6.2.2",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchcrepe>=0.0.23",
    "tqdm>=4.66.4",
    "tqdm-joblib>=0.0.4",
    "transformers>=4.43.3",
]
requires-python = ">= 3.11"

[project.urls]
"Bug Tracker" = "https://github.com/34j/so-vits-svc-fork/issues"
"Changelog" = "https://github.com/34j/so-vits-svc-fork/blob/main/CHANGELOG.md"


[project.scripts]
"so-vits-svc-fork" = "so_vits_svc_fork.__main__:cli"
"svc" = "so_vits_svc_fork.__main__:cli"
"svcf" = "so_vits_svc_fork.__main__:cli"
"svcg" = "so_vits_svc_fork.gui:main"
"svc-gui" = "so_vits_svc_fork.gui:main"
"svcf-gui" = "so_vits_svc_fork.gui:main"

[project.optional-dependencies]
docs = [
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pipdeptree>=2.23.1",
    "pip-licenses>=5.0.0",
    "auditwheel>=6.0.0",
    "delocate>=0.11.0",
]

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/so_vits_svc_fork/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=so_vits_svc_fork --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]


[tool.ruff]
target-version = "py311"


[tool.ruff.lint]
preview = true
line-length = 88

select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
]
ignore = [
    # Module level import not at top of file
    "E402",
    # Line too long
    "E501",
    # Ambiguous variable name
    "E741"
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/so_vits_svc_fork"]
